--- a/typechain/tsconfig.json
+++ b/typechain/tsconfig.json
@@ -6,5 +6,7 @@
     "outDir": "build",
     // 컴파일할 JS 버전 설정
     "target": "ES6",
+    // JS 코드가 어디서 동작할지 설정 - 자동완성 연결 (DOM : 브라우저)
+    "lib": ["ES6", "DOM"]
   }
 }
